--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-  so theres jannnis10(a bignerd)
-  and theres urm (another big nerd)
+<b>so theres jannnis10(a bignerd)</b>
+<b>and theres urm (another big nerd)</b>
