--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-so theres jannnis10(a bignerd)<br>
-and theres urm (another big nerd)
+Hewwo Cringe nerds my name is Hauzenex and i am a crig nerd es<br>
+<img src="(https://static.sbt.com.br/noticias/images/171923.jpg)">
