--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+<html>
   Hewwo Cringe nerds my name is Hauzenex and i am a crig nerd es<br>
   Oh yea yourmom is the biggest cringe nerd oh<br>
-  OH LOOK OUT A TEST IMAGE CRIG<br>
-<img src="(https://static.sbt.com.br/noticias/images/171923.jpg)">
+  <b>OH LOOK OUT A TEST IMAGE CRIG<br></b><br>
+<script>
+  console.log("cringe consoles are cringe es");
+  </script>
+
+</html>
