--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   Hewwo Cringe nerds my name is Hauzenex and i am a crig nerd es<br>
   Oh yea yourmom is the biggest cringe nerd oh<br>
-  <b>OH LOOK OUT A TEST IMAGE CRIG<br></b><br>
+  <b>crig a black square with some cringe on it thats alot creinege</b><br>
   <canvas id = "gameCanvas" width="500" height="350"></canvas>
 <script>
 var canvas
