--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ window.onload = function() {
   canvasContext = canvas.getContext('2d');
   canvasContext.fillStyle = 'black';
   canvasContext.fillRect(0,0,canvas.width,canvas.height);
+  canvasContext.fillStyle = 'white';
+  canvasContext.fillRect(250,175,50,50);
 }
 
   </script>
