--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ window.onload = function() {
   canvasContext.fillStyle = 'black';
   canvasContext.fillRect(0,0,canvas.width,canvas.height);
   canvasContext.fillStyle = 'white';
-  canvasContext.fillRect(100,150,50,50);
+  canvasContext.fillRect(50,150,50,50);
+  canvasContext.fillStyle = 'white';
+  canvasContext.fillRect(450,150,50,50);
 }
 
   </script>
