--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ window.onload = function() {
   canvasContext.fillRect(50,150,50,50);
   canvasContext.fillStyle = 'white';
   canvasContext.fillRect(400,150,50,50);
+  canvasContext.fillStyle = 'white';
+  canvasContext.fillRect(400,50,200,50);
 }
 
   </script>
