--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ function keyPush(evt) {
     }
 }
 </script>
-
+and this is a drawing i did on my school book nerd ez
 <p>
-  <a href="https://imgbb.com/"><img src="https://i.ibb.co/10mz7xd/es.png" alt="es" border="0" /></a>
+  <a href="https://ibb.co/w4c1XkY"><img src="https://i.ibb.co/9WZjLDG/lol.jpg" alt="lol" border="0"></a>
 </p>
 
 </html>
