--- a/index.html
+++ b/index.html
@@ -76,5 +76,11 @@ and this is a drawing i did on my school book nerd ez
 <p>
   <a href="https://ibb.co/w4c1XkY"><img src="https://i.ibb.co/9WZjLDG/lol.jpg" alt="lol" border="0"></a>
 </p>
+and about the crig snake game you cant play it too much as because<br>
+when you press the down key the entire page slides down but<br>
+tahts not<br>
+my problem<br>
+and as thats not my problem<br>
+TRY TO PLAY FOR YOURSELF WITHOUT PRESSING THE DOWN KEY NERD ES
 
 </html>
