--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-  <font size="+2"><b>Hewwo Cringe nerds my name is Hauzenex and i am a crig nerd es</b></font><br>
+	background-image: url(https://i.ibb.co/qY6wzrg/pngtree-parasol-parachute-rescue-equipment-color-background-picture-image-403082.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position; center center; 
+ <font size="+2"><b>Hewwo Cringe nerds my name is Hauzenex and i am a crig nerd es</b></font><br>
   Oh yea yourmom is the biggest cringe nerd oh<br>
   <b>cringe snake game is alot cringe dont you agree</b><br>
   es
