--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@ when you press the down key the entire page slides down but<br>
 tahts not<br>
 my problem<br>
 and as thats not my problem<br>
-TRY TO PLAY FOR YOURSELF WITHOUT PRESSING THE DOWN KEY NERD ES
+ <font size="+3">TRY TO PLAY FOR YOURSELF WITHOUT PRESSING THE DOWN KEY NERD ES</font>
 
 </html>
