--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<body bgcolor="#185f83">
  <font size="+2"><b>Hewwo Cringe nerds my name is Hauzenex and i am a crig nerd es</b></font><br>
   Oh yea yourmom is the biggest cringe nerd oh<br>
   <b>cringe snake game is alot cringe dont you agree</b><br>
@@ -82,5 +83,7 @@ tahts not<br>
 my problem<br>
 and as thats not my problem<br>
  <font size="+3">TRY TO PLAY FOR YOURSELF WITHOUT PRESSING THE DOWN KEY NERD ES</font>
+
+ </body>
 
 </html>
