--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor="#185f83">
+<body bgcolor="#7c5295">
  <font size="+2"><b>Hewwo Cringe nerds my name is Hauzenex and i am a crig nerd es</b></font><br>
   Oh yea yourmom is the biggest cringe nerd oh<br>
   <b>cringe snake game is alot cringe dont you agree</b><br>
