--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body bgcolor="#FFFFFF">
- <font size="+2"><b>Hewwo Cringe nerds my name is Hauzenex and i am a crig nerd es</b></font><br>
+<font face="impact, Arial, Helvetica, sans-serif" size="14">CRIG NERD I AM HAUZERNEX A CIRG NERD ES</font>
   Oh yea yourmom is the biggest cringe nerd oh<br>
   <b>cringe snake game is alot cringe dont you agree</b><br>
   es
