--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body bgcolor="#FFFFFF">
-<font face="impact, Arial, Helvetica, sans-serif" size="14">CRIG NERD I AM HAUZERNEX A CIRG NERD ES</font>
+<font face="impact, Arial, Helvetica, sans-serif" size="14">CRIG NERD I AM HAUZERNEX A CIRG NERD ES</font><br>
   Oh yea yourmom is the biggest cringe nerd oh<br>
   <b>cringe snake game is alot cringe dont you agree</b><br>
   es
