--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ function keyPush(evt) {
 </script>
 and this is a drawing i did on my school book nerd ez
 <p>
-  <a href="https://ibb.co/w4c1XkY"><img src="https://i.ibb.co/9WZjLDG/lol.jpg" alt="lol" border="0"></a>
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/cringe.jpg" />
 </p>
-and about the crig snake game you cant play it too much as because<br>
+and about the crig snake game you cant play it too much as because tt<br>
 when you press the down key the entire page slides down but<br>
 tahts not<br>
 my problem<br>
