--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ and as thats not my problem<br>
 Hauzenex gigachad
 
 <p>
-  <a href="https://imgbb.com/"><img src="https://i.ibb.co/0XgT4cD/gig-export.png" alt="gig-export" border="0"></a>
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/hauzenex%20gigachad.png" />
 </p>
 
  </body>
