--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@ Hauzenex gigachad
 <p>
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/hauzenex%20gigachad.png" />
 </p>
-<audio>
+<audio controls preload="auto">
+ <source src="https://github.com/Hauzenex/Hauzenex.github.io/raw/main/i%20am%20hauzenex%20the%20master%20cringeboy%20of%20everything.mp3" controls></source>
+</audio>
 
-  </audio>
+var audio = $("#mySoundClip")[0];
+$("nav https://github.com/Hauzenex/Hauzenex.github.io/raw/main/i%20am%20hauzenex%20the%20master%20cringeboy%20of%20everything.mp3").mouseenter(function() {
+  audio.play();
+});
 
  </body>
 
