--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Hauzenex gigachad
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/hauzenex%20gigachad.png" />
 </p>
 <br>
-insert drawing of buttermybread being simped by a trash stan and she ignoring the nerd trash stan ez<br>
+crig
 
 <p>
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" />
