--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Hauzenex gigachad
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/hauzenex%20gigachad.png" />
 </p>
 <br>
-crig
+crig t
 
 <p>
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" id='i1' />
