--- a/index.html
+++ b/index.html
@@ -73,8 +73,6 @@ function keyPush(evt) {
     }
 }
 
-document.getElementById('i1').style.left="200px";
-
 </script>
 and this is a drawing i did on my school book nerd ez
 <p>
@@ -95,7 +93,7 @@ Hauzenex gigachad
 crig t
 
 <p>
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" id='i1' />
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" />
 </p>
 
  </body>
