--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <b>cringe snake game is alot cringe dont you agree</b><br>
   es
 <canvas id="gc" width="400" height="400"></canvas>
+<style>
+body {
+  background-image: url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/hauzenex%20gigachad.png');
+  </style>
 <script>
 window.onload=function() {
     canv=document.getElementById("gc");
