--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <canvas id="gc" width="400" height="400"></canvas>
 <style>
 body {
-  background-image: url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/hauzenex%20gigachad.png');
+  background-image: url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/gif.gif');
   </style>
 <script>
 window.onload=function() {
