--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <style>
 body {
   background-image: url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/gif.gif');
+  background-size: 50% 50%;
   </style>
 <script>
 window.onload=function() {
