--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <canvas id="gc" width="400" height="400"></canvas>
 <style>
 body {
-  background-image: url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/gif.gif');
+  background-image: url('');
   background-size: 50% 50%;
   </style>
 <script>
