--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <canvas id="gc" width="400" height="400"></canvas>
 <style>
 body {
-  background-image: url('');
-  background-size: 50% 50%;
+  background-image: url('https://github.com/Hauzenex/Hauzenex.github.io/blob/main/gif.gif?raw=true');
+  background-size: 25% 25%;
   </style>
 <script>
 window.onload=function() {
