--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ crig t
 <p>
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" />
 </p>
-<canvas id="gc" width="640" height="480"></canvas>
+<canvas id="gcc" width="640" height="480"></canvas>
 
 <script type="text/javascript">
 
@@ -114,7 +114,7 @@ crig t
   aiSpeed = 6;
 
   window.onload = ()=> {
-    c = document.getElementById('gc');
+    c = document.getElementById('gcc');
     cc = c.getContext('2d');
     cc.font = '20px Arial';
     setInterval(update, 1000/30);
