--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   Oh yea yourmom is the biggest cringe nerd oh<br>
   <b>cringe snake game is alot cringe dont you agree</b><br>
   es
-<canvas id="gc" width="400" height="400"></canvas>
+<canvas id="1" width="400" height="400"></canvas>
 <style>
 body {
   background-image: url('https://github.com/Hauzenex/Hauzenex.github.io/blob/main/gif.gif?raw=true');
@@ -12,7 +12,7 @@ body {
   </style>
 <script>
 window.onload=function() {
-    canv=document.getElementById("gc");
+    canv=document.getElementById("1");
     ctx=canv.getContext("2d");
     document.addEventListener("keydown",keyPush);
     setInterval(game,1000/15);
@@ -100,7 +100,7 @@ crig t
 <p>
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" />
 </p>
-<canvas id="gcc" width="640" height="480"></canvas>
+<canvas id="2" width="640" height="480"></canvas>
 
 <script type="text/javascript">
 
@@ -114,7 +114,7 @@ crig t
   aiSpeed = 6;
 
   window.onload = ()=> {
-    c = document.getElementById('gcc');
+    c = document.getElementById('2');
     cc = c.getContext('2d');
     cc.font = '20px Arial';
     setInterval(update, 1000/30);
