--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@ crig t
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" />
 </p>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9583042552300226"
+     crossorigin="anonymous"></script>
+
  </body>
 
 </html>
