--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@ body {
   </style>
 <script>
 
-var xhr = new XMLHttpRequest();
-xhr.open("GET", "https://api.countapi.xyz/hit/hauzenex.github.io/visits");
-xhr.responseType = "json";
-xhr.onload = function() {
-    document.getElementById('visits').innerText = this.response.value;
-
 window.onload=function() {
     canv=document.getElementById("1");
     ctx=canv.getContext("2d");
@@ -108,8 +102,17 @@ crig t
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" />
 </p>
 
+<script>
+
+var xhr = new XMLHttpRequest();
+xhr.open("GET", "https://api.countapi.xyz/hit/mysite.com/visits");
+xhr.responseType = "json";
+xhr.onload = function() {
+    document.getElementById('visits').innerText = this.response.value;
 }
 xhr.send();
+
+  </script>
  </body>
 
 </html>
