--- a/index.html
+++ b/index.html
@@ -1,118 +1,1 @@
-<html>
-<body bgcolor="#FFFFFF">
-<font face="impact, Arial, Helvetica, sans-serif" size="14">CRIG NERD I AM HAUZERNEX A CIRG NERD ES</font><br>
-  Oh yea yourmom is the biggest cringe nerd oh<br>
-  <b>cringe snake game is alot cringe dont you agree</b><br>
-  es
-<canvas id="1" width="400" height="400"></canvas>
-<style>
-body {
-  background-image: url('https://github.com/Hauzenex/Hauzenex.github.io/blob/main/gif.gif?raw=true');
-  background-size: 25% 25%;
-  </style>
-<script>
-
-window.onload=function() {
-    canv=document.getElementById("1");
-    ctx=canv.getContext("2d");
-    document.addEventListener("keydown",keyPush);
-    setInterval(game,1000/15);
-}
-px=py=10;
-gs=tc=20;
-ax=ay=15;
-xv=yv=0;
-trail=[];
-tail = 5;
-function game() {
-    px+=xv;
-    py+=yv;
-    if(px<0) {
-        px= tc-1;
-    }
-    if(px>tc-1) {
-        px= 0;
-    }
-    if(py<0) {
-        py= tc-1;
-    }
-    if(py>tc-1) {
-        py= 0;
-    }
-    ctx.fillStyle="black";
-    ctx.fillRect(0,0,canv.width,canv.height);
- 
-    ctx.fillStyle="white";
-    for(var i=0;i<trail.length;i++) {
-        ctx.fillRect(trail[i].x*gs,trail[i].y*gs,gs-2,gs-2);
-        if(trail[i].x==px && trail[i].y==py) {
-            tail = 5;
-        }
-    }
-    trail.push({x:px,y:py});
-    while(trail.length>tail) {
-    trail.shift();
-    }
- 
-    if(ax==px && ay==py) {
-        tail++;
-        ax=Math.floor(Math.random()*tc);
-        ay=Math.floor(Math.random()*tc);
-    }
-    ctx.fillStyle="white";
-    ctx.fillRect(ax*gs,ay*gs,gs-2,gs-2);
-}
-function keyPush(evt) {
-    switch(evt.keyCode) {
-        case 37:
-            xv=-1;yv=0;
-            break;
-        case 38:
-            xv=0;yv=-1;
-            break;
-        case 39:
-            xv=1;yv=0;
-            break;
-        case 40:
-            xv=0;yv=1;
-            break;
-    }
-}
-
-</script>
-and this is a drawing i did on my school book nerd ez
-<p>
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/cringe.jpg" />
-</p>
-and about the crig snake game you cant play it too much as because tt<br>
-when you press the down key the entire page slides down but<br>
-tahts not<br>
-my problem<br>
-and as thats not my problem<br>
- <font size="+3">TRY TO PLAY FOR YOURSELF WITHOUT PRESSING THE DOWN KEY NERD ES</font><br>
-<br>
-Hauzenex gigachad
-<p>
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/hauzenex%20gigachad.png" />
-</p>
-<br>
-crig t
-
-<p>
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/tommy%20nerd%20es.png" />
-</p>
-
-<script>
-
-var xhr = new XMLHttpRequest();
-xhr.open("GET", "https://api.countapi.xyz/hit/mysite.com/visits");
-xhr.responseType = "json";
-xhr.onload = function() {
-    document.getElementById('visits').innerText = this.response.value;
-}
-xhr.send();
-
-</script>
- </body>
-
-</html>
+:/ cringe test go to Hauzenex.github.io/Hauzenex.html
