--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 :/ cringe test go to Hauzenex.github.io/Hauzenex.html
 
-<a href="http://google.com">
+<a href="Hauzenex.github.io/Hauzenex.html">
 <div class="container">
 
-  <img src="http://i.imgur.com/SSPyEQ3.png" alt="Avatar" class="image">
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/anothercrig.png" alt="Avatar" class="image">
   <div class="overlay">
-    <div class="text">Hello World Whats up!</div>
+    <div class="text">crig test</div>
   </div>
 
 </div>
