--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 :/ cringe test go to Hauzenex.github.io/Hauzenex.html
 
-<a href="Hauzenex.github.io/Hauzenex.html">
+<a href="Hauzenex.html">
 <div class="container">
 
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/anothercrig.png" alt="Avatar" class="image">
