--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-:/ cringe test go to Hauzenex.github.io/Hauzenex.html
+<html>
+:/ cringe test go to Hauzenex.github.io/Hauzenex.html<br>
+
+<body bgcolor="#D5DDDE">
 
 <a href="Hauzenex.html">
 <div class="container">
@@ -10,3 +13,7 @@
 
 </div>
   </a>
+
+  </body>
+
+</html>
