--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <a href="Hauzenex.html">
 <div class="container">
 
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/anothercrig.png" alt="Avatar" class="image">
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/thisisonlyanarrowbecauseicanclickeven3kpixelsattherightorleft.png" alt="Avatar" class="image">
   <div class="overlay">
     <div class="text">crig test</div>
   </div>
