--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/thisisonlyanarrowbecauseicanclickeven3kpixelsattherightorleft.png" alt="Avatar" class="image">
   <div class="overlay">
-    <div class="text">crig test</div>
+    <div class="text"></div>
   </div>
 
 </div>
