--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 <body bgcolor="#D5DDDE">
 
+@font-face {
+   font-family: Delicious; 
+   src: url('Delicious-Roman.otf');
+} 
+
 <a href="Hauzenex.html">
 <div class="container">
 
