--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body bgcolor="#D5DDDE">
 
 @font-face {
-   font-family: Delicious; 
-   src: url('Delicious-Roman.otf');
+   font-family: Hauzenex; 
+   src: url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/hauzenex.ttf');
 } 
 
 <a href="Hauzenex.html">
