--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <body bgcolor="#D5DDDE">
 
+<script>
+
+@font-face {
+   font-family: Hauzenex; 
+   src: url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/hauzenex.ttf');
+} 
+  
+  </script>
+
 <a href="Hauzenex.html">
 <div class="container">
 
