--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/thisisonlyanarrowbecauseicanclickeven3kpixelsattherightorleft.png" alt="Avatar" class="image">
   <div class="overlay">
-    <div class="text"></div>
+    <div class="text">CRIG(font test not all letters working if the font is working itself es)</div>
   </div>
 
 </div>
