--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/thisisonlyanarrowbecauseicanclickeven3kpixelsattherightorleft.png" alt="Avatar" class="image">
   <div class="overlay">
-    <div class="text">CRIG(font test not all letters working if the font is working itself es)</div>
+    <div class="text"></div>
   </div>
 
 </div>
   </a>
+
+<font face = "Hauzenex" size = "5">CRIG (test of a font im testing and this is probally gonna be bugged cringe)</font>
 
   </body>
 
