--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 
 <body bgcolor="#D5DDDE">
 
-<script>
-
-@font-face {
-   font-family: Hauzenex; 
-   src: url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/hauzenex.ttf');
-} 
-  
-  </script>
-
 <a href="Hauzenex.html">
 <div class="container">
 
@@ -22,7 +13,16 @@
 </div>
   </a>
 
-<font face = "Hauzenex" size = "5">CRIG (test of a font im testing and this is probally gonna be bugged cringe)</font>
+<a href="Hauzenex.html">
+<div class="container">
+
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/rainy.png" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text"></div>
+  </div>
+
+</div>
+  </a>
 
   </body>
 
