--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
   </a>
 
-<a href="Hauzenex.html">
+<a href="test.html">
 <div class="container">
 
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/rainy.png" alt="Avatar" class="image">
