--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <a href="test.html">
 <div class="container">
 
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/rainy.png" alt="Avatar" class="image">
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collections.png" alt="Avatar" class="image">
   <div class="overlay">
     <div class="text"></div>
   </div>
