--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   </a>
 
-<a href="test.html">
+<a href="collections.html">
 <div class="container">
 
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collections.png" alt="Avatar" class="image">
