--- a/collections.html
+++ b/collections.html
@@ -1,1 +1,9 @@
-collections
+these are some collections on mineland.net minecraft server including some forbidden some normal mobs spawn and others<br>
+and these are not all that exist because im not that good to get all of them and some of them if i get it its 100% that its duped<br>
+like the admin sword and maybe rev armor but its way less than the admin sword also for every item that is in russian<br>
+i will try to translate to english in a text and maybe in the future i can do an language switcher here idk if i can find a way to code that<br>
+and maybe translate the items on english to russian too as they are mineland primary language also probably for now there will be almost<br>
+not a big amount of items if you're seeing this in the start theres probably what 10 i didnt put any while i write that but i already have<br>
+some that i can take screenshot but along time while i am getting more and losing more and maybe i add some extra information to some items<br>
+like idk how much damage it does on a full rev fury head chaos arrow and red russ cause thats almost every nerd setup<br>
+but for now i will just add some crig colections and some crig information es<br>
