--- a/collections.html
+++ b/collections.html
@@ -7,3 +7,7 @@ not a big amount of items if you're seeing this in the start theres probably wha
 some that i can take screenshot but along time while i am getting more and losing more and maybe i add some extra information to some items<br>
 like idk how much damage it does on a full rev fury head chaos arrow and red russ cause thats almost every nerd setup<br>
 but for now i will just add some crig colections and some crig information es<br>
+<br>
+<p align="center">
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collectisn/2022-07-25_20.17.54.png" />
+</p>
