--- a/collections.html
+++ b/collections.html
@@ -8,6 +8,9 @@ some that i can take screenshot but along time while i am getting more and losin
 like idk how much damage it does on a full rev fury head chaos arrow and red russ cause thats almost every nerd setup<br>
 but for now i will just add some crig colections and some crig information es<br>
 <br>
+<br>
+big shot sword (forbidden)
 <p align="center">
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collectisn/2022-07-25_20.17.54.png" />
 </p>
+Its on [[BIG]] collection
