--- a/collections.html
+++ b/collections.html
@@ -14,3 +14,9 @@ big shot sword (forbidden)
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collectisn/2022-07-25_20.17.54.png" />
 </p>
 Its on [[BIG]] collection
+<br>
+snow fox head
+<p>
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collectisn/2022-07-25_20.18.53.png" />
+</p>
+Its on winter collection (2021)
