--- a/collections.html
+++ b/collections.html
@@ -21,3 +21,10 @@ snow fox head
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collectisn/2022-07-25_20.18.53.png" />
 </p>
 Its on winter collection (2021)
+<br>
+<br>
+bird of hope
+<p>
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collectisn/2022-07-25_20.19.08.png" />
+</p>
+Its on spring collection (2021)
