--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <html>
 
-<body>
-
-  </a>
-
-<a href="collections.html">
-<div class="container">
-
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collections.png" alt="Avatar" class="image">
-  <div class="overlay">
-    <div class="text"></div>
-  </div>
-
-</div>
-  </a>
+<body bgcolor="#000000">
 
   </body>
 
