--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <body bgcolor="#000000">
 
-  <p style="color:green">IAMGINE HAVING A CRIG TEST ES ES</p>
+  <p style="color:lime">IAMGINE HAVING A CRIG TEST ES ES</p>
 
   </body>
 
