--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <title>cvrig title</title>
   </head>
 <body bgcolor="#000000">
-
+<div style = "position:absolute; left:80px; top:20px;">
   <p style="color:lime">IAMGINE HAVING A CRIG TEST ES ES</p>
-
+  </div>
   </body>
 
 </html>
