--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>cvrig title</title>
   </head>
-<body bgcolor="#000000">
+<body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:5px;">
   <p style="color:lime">IAMGINE HAVING A CRIG TEST ES ES</p>
   </div>
