--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:5px;">
-  <p style="color:lime">IAMGINE HAVING A CRIG TEST ES ES</p>
+  <p style="color:lime"><b>IAMGINE HAVING A CRIG TEST ES ES</b></p>
   </div>
   </body>
 
