--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:5px;">
-  <p style="color:lime" style="font-family:'papyrus'"><b>IAMGINE HAVING A CRIG TEST ES ES</b></p>
+  <p style="color:lime" style="font-family:'papyrus'"><b>IAMGINE HAVING A CRIG TEST ES ES rig</b></p>
   </div>
   </body>
 
