--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:5px;">
-  <p style="color:lime" "font-family:'papyrus'"><b>IAMGINE HAVING A CRIG TEST ES ES rige</b></p>
+  <h1 style="font-size: 4rem; color: #2ecc71">imagine test nerd moda toad</h1>
   </div>
   </body>
 
