--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:5px;">
-  <h1 style="font-size: 4rem; color: #32CD32">imagine test nerd moda toad</h1>
+  <h1 style="font-size: 10; color: #32CD32">imagine test nerd moda toad</h1>
   </div>
   </body>
 
