--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <title>cvrig title</title>
   </head>
 <body bgcolor="#05170B">
-<div style = "position:absolute; left:20px; top:5px;">
-  <h1 style="font-size: 1.6rem; color: #2ECC71">imagine test nerd moda toad</h1>
+<div style = "position:absolute; left:20px; top:2px;">
+  <h1 style="font-size: 1.6rem; color: #2ECC71">collections</h1>
   </div>
   </body>
 
