--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>cvrig title</title>
+  <title>HAUZENEX</title>
   </head>
 <body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:2px;">
