--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:2px;">
-  <h1 style="font-size: 1.6rem; color: #2ECC71">collections</h1>
+  <h1 style="font-family: "Comic Sans MS", "Comic Sans", cursive;" color: #2ECC71">collections</h1>
   </div>
   </body>
 
