--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:1px;">
-  <a href="hauzenex.github.io/collections.html" ><h1 style="font-family:'Comic Sans MS', 'Comic Sans', 'cursive';" ><font color="#2ECC71">collections</font></h1><a>
+  <a href="collections.html" ><h1 style="font-family:'Comic Sans MS', 'Comic Sans', 'cursive';" ><font color="#2ECC71">collections</font></h1><a>
   </div>
   </body>
 
