--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 <body bgcolor="#05170B">
 <div style = "position:absolute; left:20px; top:1px;">
-  <h1 style="font-family:'Comic Sans MS', 'Comic Sans', 'cursive';" ><font color="#2ECC71" size="-1">ok so this is the cringe hauzenex website its kinda cringe because hauzenex is a nerd and not a coder<br>and idk maybe i will try to add useful mineland information or just make something cringe because like<br> idk like idk but atomseis worst moder kt07 second worst moder and<br> jannnis10 simps for binallenegal and also kt07 simps for atomseis and also the best moders are migatooo and sugaryeehaw ez<br>and cozmox2000 simps for 5unaluck_</font></h1>
+  <h1 style="font-family:'Comic Sans MS', 'Comic Sans', 'cursive';" ><font color="#2ECC71" size="-1">ok so this is the cringe hauzenex website its kinda cringe because hauzenex is a nerd and not a coder<br>and idk maybe i will try to add useful mineland information or just make something cringe because like<br> idk like idk but atomseis worst moder kt07 second worst moder and<br> jannnis10 simps for binallenegal and also kt07 simps for atomseis and also the best moders are migatooo and sugaryeehaw ez<br>and cozmox2000 simps for 5unaluck_ es</font></h1>
   <a href="collections.html" ><h1 style="font-family:'Comic Sans MS', 'Comic Sans', 'cursive';" ><font color="#2ECC71">collections</font></h1><a>
   </div>
   </body>
