--- a/collections.html
+++ b/collections.html
@@ -1,3 +1,6 @@
+
+<body bgcolor="#05170B">
+
 these are some collections on mineland.net minecraft server including some forbidden some normal mobs spawn and others<br>
 and these are not all that exist because im not that good to get all of them and some of them if i get it its 100% that its duped<br>
 like the admin sword and maybe rev armor but its way less than the admin sword also for every item that is in russian<br>
@@ -28,3 +31,5 @@ bird of hope
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collectisn/2022-07-25_20.19.08.png" />
 </p>
 Its on spring collection (2021)
+
+</body>
