--- a/collections.html
+++ b/collections.html
@@ -1,4 +1,7 @@
-
+<html>
+<head>
+  <title>HAUZENEX</title>
+  </head>
 <body bgcolor="#05170B">
 
 these are some collections on mineland.net minecraft server including some forbidden some normal mobs spawn and others<br>
@@ -33,3 +36,4 @@ bird of hope
 Its on spring collection (2021)
 
 </body>
+</html>
