--- a/collections.html
+++ b/collections.html
@@ -4,6 +4,8 @@
   </head>
 <body bgcolor="#05170B">
 
+<div style = "position:absolute; left:20px; top:1px;">
+  <h1 style="font-family:'Comic Sans MS', 'Comic Sans', 'cursive';" ><font color="#2ECC71" size="-1">
 these are some collections on mineland.net minecraft server including some forbidden some normal mobs spawn and others<br>
 and these are not all that exist because im not that good to get all of them and some of them if i get it its 100% that its duped<br>
 like the admin sword and maybe rev armor but its way less than the admin sword also for every item that is in russian<br>
