--- a/collections.html
+++ b/collections.html
@@ -36,6 +36,8 @@ bird of hope
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/collectisn/2022-07-25_20.19.08.png" />
 </p>
 Its on spring collection (2021)
+</font></h1>
 
 </body>
+
 </html>
