--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <title>HAUZENEX</title>
-<link href="http://fonts.cdnfonts.com/css/elianto" rel="stylesheet">
+<link href="https://github.com/Hauzenex/Hauzenex.github.io/raw/main/Elianto-Regular.otf" rel="stylesheet">
 <style>
-@import url('http://fonts.cdnfonts.com/css/elianto');
+@import url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/Elianto-Regular.otf');
 </style>
 </head>
 <body bgcolor="#05170B">
