--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <title>HAUZENEX</title>
 </head>
 <body bgcolor="#05170B">
-<link href="https://github.com/Hauzenex/Hauzenex.github.io/raw/main/Elianto-Regular.otf" rel="stylesheet">
-<style>
-@import url('https://github.com/Hauzenex/Hauzenex.github.io/raw/main/Elianto-Regular.otf');
-</style>
-<div style = "position:absolute; left:20px; top:1px;">
-  <h1 style="font-family:'Elianto', sans-serif; ><font color="#2ECC71" size="-1">ok so this is the cringe hauzenex website its kinda cringe because hauzenex is a nerd and not a coder<br>and idk maybe i will try to add useful mineland information or just make something cringe because like<br> idk like idk but atomseis worst moder kt07 second worst moder and<br> jannnis10 simps for binallenegal and also kt07 simps for atomseis and also the best moders are migatooo and sugaryeehaw ez<br>and cozmox2000 simps for 5unaluck_ essx</font></h1>
+<p align="center">
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/gotcha.png" />
+</p><br>
   <a href="collections.html" ><h1 style="font-family:'Comic Sans MS', 'Comic Sans', 'cursive';" ><font color="#2ECC71">collections</font></h1><a>
   </div>
   </body>
