--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <p align="center">
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/YASMIN.svg" />
 </p><br>
-  <a href="collections.html" ><h1 style="font-family:'Comic Sans MS', 'Comic Sans', 'cursive';" ><font color="#2ECC71">collections</font></h1><a>
+  <a href="collections.html" ><p align="center">
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/images%20that%20i%20use%20on%20internet%20es/ADNA.svg" />
+</p><br><a>
   </div>
   </body>
 
