--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 </p><a>
   </div>
 <iframe width="560" height="315" src="https://musiclab.chromeexperiments.com/Song-Maker/embed/5746987731517440" frameborder="0" allowfullscreen></iframe>
-  </body>
+<br>
+  <div class="counter">
+
+    <div class="head">visits</div>
+    <div class="count">00</div>
+
+  </div>
+
+  <script src='script.js'></script>
+</body>
 
 </html>
