--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>HAUZENEX</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body bgcolor="#05170B">
 <p align="center">
