--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
 </head>
 
 <body>
-<script>
-<button id="myButton" class="float-left submit-button" >Home</button>
-
-<script type="text/javascript">
-    document.getElementById("myButton").onclick = function () {
-        location.href = "hauzenex.github.io/test";
-    };
-</script>
+aluno da escola municipal são domingos<br>
+provavelmente o melhor em alguns quesitos<br>
+mais não em todos :/
 </body>
 
 </html>
