--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 aluno da escola municipal são domingos<br>
 provavelmente o melhor em alguns quesitos<br>
-mais não em todos :/
+mais não em todos :/<br>
+![plot](./Images/adna.jpg)<br>
 </body>
 
 </html>
