--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 aluno da escola municipal são domingos<br>
 provavelmente o melhor em alguns quesitos<br>
 mais não em todos :/<br>
-![plot](./Images/adna.jpg)<br>
+<p align="center">
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" />
+</p>
 </body>
 
 </html>
