--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ provavelmente o melhor em alguns quesitos<br>
 mais não em todos :/<br>
 <p align="center">
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" />
+</p><br>
+<p align="center">
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/izabella.jpg" />
 </p>
 </body>
 
