--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ aluno da escola municipal são domingos<br>
 provavelmente o melhor em alguns quesitos<br>
 mais não em todos :/<br>
 <p align="center">
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" width="1264" height="448" />
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" width="400" height="auto" />
 </p><br>
 <p align="center">
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/izabella.jpg" />
