--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-aluno da escola municipal são domingos<br>
+<p align="center">aluno da escola municipal são domingos<br>
 provavelmente o melhor em alguns quesitos<br>
-mais não em todos :/<br>
+    mais não em todos :/<br></p>
 <p align="center">
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" width="400" height="auto" />
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" width="800" height="auto" />
 </p><br>
 <p align="center">
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/izabella.jpg" />
