--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-<p align="center">aluno da escola municipal são domingos<br>
+<p align="center"><b>aluno da escola municipal são domingos<br>
 provavelmente o melhor em alguns quesitos<br>
-    mais não em todos :/<br></p>
+    mais não em todos :/</b><br></p>
 <p align="center">
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" width="800" height="auto" />
 </p><br>
 <p align="center">
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/izabella.jpg" />
+  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/izabella.jpg" width="800" height="auto" />
 </p>
 </body>
 
