--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<p align="center"><b>aluno da escola municipal são domingos<br>
+<p align="center" style="font-family:'Courier New'" ><b>aluno da escola municipal são domingos<br>
 provavelmente o melhor em alguns quesitos<br>
     mais não em todos :/</b><br></p>
 <p align="center">
