--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-<p align="center" style="font-family:'Courier New'" ><b>aluno da escola municipal são domingos<br>
-provavelmente o melhor em alguns quesitos<br>
-    mais não em todos claramente</b><br></p>
+<p align="center" style="font-family:'Courier New'" ><b>meu "site" do github<br>
+se não sabe o que é github<br>
+foi triste<br>
+aqui algums desenhos</b><br></p>
 <p align="center">
   <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" width="800" height="auto" />
 </p><br>
