--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
 </head>
 
 <body>
-<p align="center" style="font-family:'Courier New'" ><b>meu "site" do github<br>
-se não sabe o que é github<br>
-foi triste<br>
-aqui algums desenhos</b><br></p>
-<p align="center">
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/adna.jpg" width="800" height="auto" />
-</p><br>
-<p align="center">
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/izabella.jpg" width="800" height="auto" />
-</p>
+<p align="center" >my name is caio
+and some people call me smart
+but i think im just normal...
+    "normal"</p>
 </body>
 
 </html>
