--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-<p align="center" >my name is caio
-and some people call me smart
-but i think im just normal...
-    "normal"</p>
+<p align="center" >
+my name is caio and some people call me smart<br>
+or genius talented and that i have a bright brain...<br>
+like the sun
+</p>
 </body>
 
 </html>
