--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <p align="center" >
 my name is caio and some people call me smart<br>
 or genius talented and that i have a bright brain...<br>
-like the sun
+or just bright... like the sun<br>
+the sun is a star in the center of our solar system which is on the milky way<br>
+it was believed that 1.3 million earths could fit inside our solar system sun<br>
+
 </p>
 </body>
 
