--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ or genius talented and that i have a bright brain...<br>
 or just bright... like the sun<br>
 the sun is a star in the center of our solar system which is on the milky way<br>
 it was believed that 1.3 million earths could fit inside our solar system sun<br>
-
+<p align="center">
+  <img src="./Images/yasmin.png" />
+</p>
 </p>
 </body>
 
