--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@ it was believed that 1.3 million earths could fit inside our solar system sun<br
 <p align="center">
   <img src="./Images/yasmin.png" />
 </p><br>
+<p align="center" >
 this is what would be the math about how many earths would fit in the sun<br>
 its simply getting the sun volume and dividing it by the earth volume<br>
 but if you think just a little bit you know that spheres are not like cubes<br>
-or others shapes, spheres dont fit in each other
+    or others shapes, spheres dont fit in each other</p>
 <p align="center">
   <img src="./Images/awany.png" />
 </p><br>
-just like that, as you can see the round shapes the spheres let some gaps<br>
+<p align="center" >just like that, as you can see the round shapes the spheres let some gaps<br>
 so calculating every gap that it would make in a 3D space<br>
-it would would fit 932.884 earths inside the sun
+    it would would fit 932.884 earths inside the sun </p>
 </p>
 </body>
 
