--- a/index.html
+++ b/index.html
@@ -9,27 +9,9 @@
 </head>
 
 <body>
-<p align="center" >
-my name is caio and some people call me smart<br>
-or genius talented and that i have a bright brain...<br>
-or just bright... like the sun<br>
-the sun is a star in the center of our solar system which is on the milky way<br>
-it was believed that 1.3 million earths could fit inside our solar system sun<br>
-<p align="center">
-  <img src="./Images/yasmin.png" />
-</p><br>
-<p align="center" >
-this is what would be the math about how many earths would fit in the sun<br>
-its simply getting the sun volume and dividing it by the earth volume<br>
-but if you think just a little bit you know that spheres are not like cubes<br>
-    or others shapes, spheres dont fit in each other</p>
-<p align="center">
-  <img src="./Images/awany.png" />
-</p><br>
-<p align="center" >just like that, as you can see the round shapes the spheres let some gaps<br>
-so calculating every gap that it would make in a 3D space<br>
-    it would would fit 932.884 earths inside the sun </p>
-</p>
+meu nome é caio<br>
+claudemi kevin carlos eric acleberson gosta de peppa pig<br>
+ez
 </body>
 
 </html>
