--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="icon" type="image/x-icon" href="./Images/claudemir.png">
 </head>
 
-<body>
-<p>
-  <img src= https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/somebody%20efo.png />
-</p>
+<body style="background-color:black,">
+
 </body>
 
 </html>
