--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/x-icon" href="./Images/claudemir.png">
 </head>
 
-<body style="background-color:black,">
-
+<body bgcolor="#000000">
+    <h1><font color=white>:)</h1>
 </body>
 
 </html>
