--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body bgcolor="#000000">
-    <h1><font color="white" size="+2">:)</h1>
+    <h1><font color="white" size="+10">:/</h1>
 </body>
 
 </html>
