--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body bgcolor="#000000">
+![plot](./Images/2022-12-12_15.44.32.png)
     <h1><font color="white" size="+30">:/</h1>
-![plot](./Images/2022-12-12_15.44.32.png)<br>
+<br>
 hello buttermybrad l
 </body>
 
