--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body bgcolor="#000000">
-![plot](./Images/2022-12-12_15.44.32.png)
-    <h1><font color="white" size="+30">:/</h1>
+    <h1><font color="white" size="+30">:/<br>
+<p align="center">
+  <img src="https://count.getloli.com/get/@starcraft66?theme=gelbooru" />
+</p>
+</h1>
 <br>
 hello buttermybrad l
 </body>
