--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 
 <body bgcolor="#000000">
     <h1><font color="white" size="+30">:/<br>
-<p align="center">
-  <img src="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/2022-12-12_15.44.32.png" />
-</p>
-</h1>
 <br>
-hello buttermybrad l
+Caio
 </body>
 
 </html>
