--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body bgcolor="#000000">
-    <h1><font color="white" size="+30">:/<br>
+    <h1><font color="white" size="+30">Hauzenex
 <br>
-Caio
+my name is caio
 </body>
 
 </html>
