--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1><font color="white" size="+30">Hauzenex
 <br>
 my name is caio<br>
-<a href="http://canarytokens.com/terms/e47rlgba6davp0nazkg4fcnp0/post.jsp">hauzenex</a><br>
-_midnight666_ hot uwu
+<a href="https://youtu.be/gNJRSqaT3Z4">Hauzenex</a><br>
+rose hot uwu
 </body>
 
 </html>
