--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./Images/claudemir.png">
 </head>
 
-<body bgcolor="#000000">
+<body bgcolor="#1F2024">
     <h1><font color="white" size="+30">Hauzenex
 <br>
 my name is caio<br>
