--- a/midnight.html
+++ b/midnight.html
@@ -1,1 +1,16 @@
-https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/Rose.png uwu
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>rose cute</title>
+    <link rel="icon" type="image/x-icon" href="./Images/claudemir.png">
+</head>
+
+<body bgcolor="#1F2024">
+    <h1><font color="white" size="+30">
+hello
+</body>
+
+</html>
