--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br>
 my name is caio<br>
 <a href="https://youtu.be/gNJRSqaT3Z4">Hauzenex</a><br>
-<a href="hauzenex.github.io/midnight.html">Rose hot uwu</a><br>
+<a href="midnight.html">Rose hot uwu</a><br>
 </body>
 
 </html>
