--- a/midnight.html
+++ b/midnight.html
@@ -10,7 +10,7 @@
 
 <body bgcolor="#1F2024">
     <h1><font color="white" size="+30">
-<img src=”(https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/Rose.png)”>
+<img src=”(Rose.png)”>
 </body>
 
 </html>
