--- a/midnight.html
+++ b/midnight.html
@@ -10,7 +10,7 @@
 
 <body bgcolor="#1F2024">
     <h1><font color="white" size="+30">
-<img src=Rose.png>
+<img src=Rose.png width="960" height"810">
 </body>
 
 </html>
