--- a/midnight.html
+++ b/midnight.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rose cute</title>
-    <link rel="icon" type="image/x-icon" href="./Images/claudemir.png">
+    <link rel="icon" type="image/x-icon" href="./Images/otkyodo.png">
 </head>
 
 <body bgcolor="#1F2024">
