--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 my name is caio<br>
 <a href="https://youtu.be/gNJRSqaT3Z4">Hauzenex</a><br>
 <a href="midnight.html">Rose hot uwu</a><br>
+<a href="https://scratch.mit.edu/projects/789346800/">Game: Hauzenex adventures (being made)</a><br>
 </body>
 
 </html>
