--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./Images/claudemir.png">
 </head>
 
-<body bgcolor="#1F2024" background="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/said%20was%20it%20never%20was.png">
+<body background="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/said%20was%20it%20never%20was.png">
     <h1><font color="white" size="+30">Hauzenex
 <br>
 my name is caio<br>
