--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhOBOS</title>
     <link rel="icon" type="image/x-icon" href="./Images/claudemir.png">
+<style>
+body {
+  background-image: url('https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/said%20was%20it%20never%20was.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 </head>
 
-<body background="https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/said%20was%20it%20never%20was.png">
+<body>
     <h1><font color="white" size="+30">Hauzenex
 <br>
 my name is caio<br>
