--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ body {
 </head>
 
 <body>
-    <h1><font color="white" size="+30">Hauzenex
+    <h1><font color="white" size="+30"><p>hauzenex uwu</p>
 <br>
-my name is caio<br>
+<p>my name is caio</p><br>
 <a href="https://youtu.be/gNJRSqaT3Z4">Hauzenex</a><br>
 <a href="midnight.html">Rose hot uwu</a><br>
 <a href="https://scratch.mit.edu/projects/789346800/">Game: Hauzenex adventures (being made)</a><br>
