--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
+.p1 {
+  font-family: "Times New Roman", Times, serif;
+}
+
+.p2 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.p3 {
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+
 </style>
 </head>
 
