--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@ body {
 </head>
 
 <body>
-    <h1><font color="white" size="+30"><p>hauzenex uwu</p>
-<br>
-<p>my name is caio</p><br>
+<font color="white" size="+30"><p1>hauzenex uwu</p>
+<p1>my name is caio</p><br>
 <a href="https://youtu.be/gNJRSqaT3Z4">Hauzenex</a><br>
 <a href="midnight.html">Rose hot uwu</a><br>
 <a href="https://scratch.mit.edu/projects/789346800/">Game: Hauzenex adventures (being made)</a><br>
