--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./Images/claudemir.png">
 <style>
 body {
-  background-image: url('https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/said%20was%20it%20never%20was.png');
+  background-image: url('https://raw.githubusercontent.com/Hauzenex/Hauzenex.github.io/main/Images/the%20all%20seeing%20eye%20of%20god.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
