--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 </head>
 
 <body>
-<font color="white" size="+20<p2hauzenex uwu</>
+<font color="white" size="+20<p2>hauzenex uwu</p>
 <p2>my name is caio</p><br>
 <a href="https://youtu.be/gNJRSqaT3Z4">Hauzenex</a><br>
 <a href="midnight.html">Rose hot uwu</a><br>
