--- a/midnight.html
+++ b/midnight.html
@@ -11,7 +11,7 @@
 <body bgcolor="#1F2024">
     <h1><font color="white" size="+30">
 <img src=Rose.png width="475" height"400">
-<img src=ik youre angry.png width="475" height"400">
+<img src=ik%20youre%20angry.png width="475" height"400">
 </body>
 
 </html>
