--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Hello nerd this is hauzenex website">
     <title>aNOOBa</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body>
     <section class="red">
