--- a/midnight.html
+++ b/midnight.html
@@ -10,8 +10,8 @@
 
 <body bgcolor="#1F2024">
     <h1><font color="white" size="+30">
-<img src=/Rose.png width="475" height"400">
-<img src=/ik%20youre%20angry.png width="860" height"537"><br>
+<img src=./Images/Rose.png width="475" height"400">
+<img src=./Images/ik%20youre%20angry.png width="860" height"537"><br>
 ik cringe
 </body>
 
